ansible/files/firewall/ip6tables.rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-N sshguard
-A INPUT -j sshguard
-A INPUT -p tcp -m multiport --dports 25,80,443,587,993,22345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT

-A INPUT -s 2001:6a8:2880:a021::6/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::1/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a077::cd/128 -j ACCEPT
-A INPUT -s ::1 -j ACCEPT
-A INPUT -j REJECT 
-A FORWARD -j REJECT 
COMMIT
