ansible/files/firewall/iptables.rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-N sshguard
-A INPUT -j sshguard
-A INPUT -p tcp -m multiport --dports 25,80,443,587,993,22345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -j ACCEPT

-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
-A INPUT -j REJECT 
-A FORWARD -j REJECT 
COMMIT
